--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "cart.js": "^0.0.0",
     "chart.js": "^3.9.1",
     "hamburger-react": "^2.5.0",
-    "next": "14.1.0",
+    "next": "^14.1.0",
     "react": "^18.2.0",
     "react-chartjs-2": "^4.3.1",
     "react-dom": "^18.2.0"
